2009-10-15  Michael Natterer  <mitch@lanedo.com>

	Fixes: NB#138249 (Sapwood doesn't pass it's test suite)

	Apply patch from Sven Herzberg:

	* Makefile.decl: don't fail if Xvfb wasn't found (this way the real
	tests won't fail on arm Scratchboxes)
	* debian/rules: make sure we only integrate sapwood versions passing
	the test suite
	* engine/sapwood-main.c: don't expose the new variable

2009-08-25  Sven Herzberg  <sven@lanedo.com>

	Fixes: NB#134552 (Progress Banner at start of maps and tutorial applet
	is broken)

	* engine/sapwood-pixmap.c (sapwood_crop_pixmap),
	(sapwood_pixmap_render_rects): don't respect the mask too early

2009-08-25  Sven Herzberg  <sven@lanedo.com>

	Fixes: NB#134552 (Progress Banner at start of maps and tutorial applet
	is broken.)

	* engine/sapwood-pixmap.c (sapwood_pixmap_render_rects_internal),
	(sapwood_crop_pixmap), (sapwood_pixmap_render_rects): properly clip
	to the cropped region; also respect the alpha mask in the cropping

2009-08-20  Christian Dywan  <christian@lanedo.com>

	NB#118393 - Crop images if they are supposed to be rendered too small

	* engine/sapwood-pixmap.c (sapwood_crop_pixmap),
	(sapwood_pixmap_render_rects): Implement sapwood_crop_pixmap and crop
	the image if it is too big.

2009-08-07  Alejandro G. Castro  <alex@igalia.com>

	Added a new debug enviroment option to enable the synchronous X
	error handling.

	* engine/sapwood-main.c,
	(theme_init): Captured the new "xtraps" option in a new boolean
	variable.
	* engine/sapwood-pixmap.h:
	* engine/sapwood-pixmap.c,
	(sapwood_pixmap_get_for_file):
	* engine/theme-pixbuf.c,
	(theme_pixbuf_render): Added conditions to avoid gdk_flush if the
	xtraps debug option is not actived.

	Fixes: NB#131431 (gdk_flush in sapwood is causing tearing)

2009-01-16  Sven Herzberg  <sven@imendio.com>

	Don't echo the screen name; this reduces the noise from running the
	test cases

	* tests/sapwood-wrapper: drop this

	Added proper and distinguishable logging domains
